--- a/README.mb
+++ b/README.mb
@@ -4,6 +4,8 @@ A series of lectures to introduce people to the ideas, technologies and techniqu
 
 This is aimed at those people who are not programmers themselves, but work directly with programmers, and who would benefit from an expanded lexicon of technical jargon and enhanced understanding of the procedures and methods used by web developers.
 
+## Lectures
+
 ## Structure
 
 This repository is divided into two main sections:
